@@ -55,8 +55,8 @@ export async function Migrate(): Promise<void> {
     let db_ver = info.version;
     let app_ver = DB_VERSION;
 
-    logInfo(`Database schema version : ${db_ver}`);
-    logInfo(`Application schema version : ${app_ver}`);
+    logInfo(`Database schema version : ${db_ver}`, "Migration");
+    logInfo(`Application schema version : ${app_ver}`, "Migration");
 
     //Compare db version with app version and apply migration
     if (db_ver > app_ver) {
